--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,8 @@ click==8.2.1
 colorama==0.4.6
 fastapi==0.116.1
 h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
 idna==3.10
 isodate==0.7.2
 Jinja2==3.1.6
