--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ anyio==4.10.0
 azure-common==1.1.28
 azure-core==1.35.0
 azure-search-documents==11.5.3
+beautifulsoup4==4.13.4
 certifi==2025.8.3
 charset-normalizer==3.4.3
 click==8.2.1
@@ -21,6 +22,7 @@ python-dotenv==1.1.1
 requests==2.32.4
 six==1.17.0
 sniffio==1.3.1
+soupsieve==2.7
 starlette==0.47.2
 typing-inspection==0.4.1
 typing_extensions==4.14.1
